src/components/summary/summary/Summary.module.scss
@use 'styles/theme' as theme;
@use 'styles/display' as display;

.sectionBox {
	padding: 1em;
}

.content {
	padding-top: 1em;
}

.summaryContainer {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: stretch ;
    gap: 1em;

    @include display.media-breakpoint-down(sm) {
        flex-direction: column;
    }

    >div {
        flex: 1 1 calc(50% - 0.5em);
        max-width: calc(50% - 0.5em);
        display: flex;
        flex-direction: column;
    }
}

.description {
    color: theme.$text-secondary;
    font-size: theme.$font-size-small;
    margin-bottom: 1em;
}

